--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "frontend",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc -p ./tsconfig.json",
+    "start:dev": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./dist/index.js\""
   },
   "keywords": [],
   "author": "",
@@ -14,7 +17,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.13.0",
-    "tsc": "^2.0.4",
+    "tsc-watch": "^6.2.0",
     "typescript": "^5.4.5"
   }
 }
